--- a/nginx.conf
+++ b/nginx.conf
@@ -51,14 +51,41 @@ http {
         server_name  localhost;
 ####        root         /usr/share/nginx/html;
 
+    client_max_body_size 4G;
+
+
+    keepalive_timeout 5;
+
+    # Location of our static files
+#        root /var/www/myapp/public;
+    root  /var/www/ec2-user/web_corporate/current/public;
+
+    location ~ ^/assets/ {
+    root  /var/www/ec2-user/web_corporate/current/public;
+#    	root /var/www/myapp/public;
+#        root /var/www/myapp/shared/public;
+    }
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+
+        if (!-f $request_filename) {
+		 proxy_pass http://unicornapp;
+#            proxy_pass http://unicorn_server;
+            break;
+        }
+    }
+
         #charset koi8-r;
 
         #access_log  /var/log/nginx/host.access.log  main;
 
-        location / {
-		 #####added by Shinya 
-		 proxy_pass http://unicornapp;
-        }
+        # location / {
+	# 	 #####added by Shinya 
+	# 	 proxy_pass http://unicornapp;
+        # }
 
         # redirect server error pages to the static page /40x.html
         #
